parcial04 - add photo upload
